# Funcion_prueba

./: Dockerfile  Makefile  README.md  fut_funcion.py  pyproject.toml
plot_tsr/: __init__.py  fut_funcion.py
tests/: test_fut_function.py
